{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 563,
  "lineage": "66db91f8-deec-6aa9-ce51-23f202f6dae0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api_server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02510a57068f4f7a9",
            "arn": "arn:aws:ec2:us-east-2::elastic-ip/eipalloc-02510a57068f4f7a9",
            "association_id": "eipassoc-0bc2baada12892a4f",
            "domain": "vpc",
            "id": "eipalloc-02510a57068f4f7a9",
            "instance": "i-051318ee93be12225",
            "network_border_group": "us-east-2",
            "network_interface": "eni-010364fdaa285f987",
            "private_dns": "ip-172-31-41-33.us-east-2.compute.internal",
            "private_ip": "172.31.41.33",
            "public_dns": "ec2-3-14-89-239.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.89.239",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "atlas-of-us-api-eip"
            },
            "tags_all": {
              "Name": "atlas-of-us-api-eip"
            }
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_api_profile",
            "aws_iam_role.ec2_api_role",
            "aws_instance.api_server",
            "aws_key_pair.api_server_key",
            "aws_security_group.api_server_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "embeddings_api_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0882d8b3707503c84",
            "arn": "arn:aws:ec2:us-east-2::elastic-ip/eipalloc-0882d8b3707503c84",
            "association_id": "eipassoc-08c2e4d0d6e11a5f4",
            "domain": "vpc",
            "id": "eipalloc-0882d8b3707503c84",
            "instance": "i-084072b8cd9b8de16",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0696d56dedeabad52",
            "private_dns": "ip-172-31-47-251.us-east-2.compute.internal",
            "private_ip": "172.31.47.251",
            "public_dns": "ec2-3-133-35-128.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.35.128",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "embeddings-api-eip"
            },
            "tags_all": {
              "Name": "embeddings-api-eip"
            }
          },
          "dependencies": [
            "aws_iam_instance_profile.embeddings_api_ec2_profile",
            "aws_iam_role.embeddings_api_ec2_role",
            "aws_instance.embeddings_api",
            "aws_key_pair.api_server_key",
            "aws_security_group.embeddings_api_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "image_gen_api_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e00d9c7603c049c",
            "arn": "arn:aws:ec2:us-east-2::elastic-ip/eipalloc-02e00d9c7603c049c",
            "association_id": "eipassoc-0f5c406f07e96d283",
            "domain": "vpc",
            "id": "eipalloc-02e00d9c7603c049c",
            "instance": "i-019eea96fc8e8609b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b9b3250d7c0aeb27",
            "private_dns": "ip-172-31-35-192.us-east-2.compute.internal",
            "private_ip": "172.31.35.192",
            "public_dns": "ec2-3-141-157-13.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.157.13",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "image-gen-api-eip"
            },
            "tags_all": {
              "Name": "image-gen-api-eip"
            }
          },
          "dependencies": [
            "aws_iam_instance_profile.image_gen_api_ec2_profile",
            "aws_iam_role.image_gen_api_ec2_role",
            "aws_instance.image_gen_api",
            "aws_key_pair.api_server_key",
            "aws_security_group.image_gen_api_sg",
            "data.aws_ami.deep_learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "llm_api_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d45163de989368c",
            "arn": "arn:aws:ec2:us-east-2::elastic-ip/eipalloc-09d45163de989368c",
            "association_id": "eipassoc-0cef9630563f981ff",
            "domain": "vpc",
            "id": "eipalloc-09d45163de989368c",
            "instance": "i-00288443bdb2180d6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05b7f53b83fbaeb5d",
            "private_dns": "ip-172-31-32-89.us-east-2.compute.internal",
            "private_ip": "172.31.32.89",
            "public_dns": "ec2-3-149-97-106.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.97.106",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "llm-api-eip"
            },
            "tags_all": {
              "Name": "llm-api-eip"
            }
          },
          "dependencies": [
            "aws_iam_instance_profile.llm_api_ec2_profile",
            "aws_iam_role.llm_api_ec2_role",
            "aws_instance.llm_api",
            "aws_key_pair.api_server_key",
            "aws_security_group.llm_api_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06ba285c80bc4ab50",
            "arn": "arn:aws:ec2:us-east-2::instance/i-051318ee93be12225",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-api-profile",
            "id": "i-051318ee93be12225",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "api-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-010364fdaa285f987"
              }
            ],
            "primary_network_interface_id": "eni-010364fdaa285f987",
            "private_dns": "ip-172-31-41-33.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.33",
            "public_dns": "ec2-3-14-89-239.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.89.239",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:145880140878:key/e5a7491f-3cfe-4cf0-a10b-efe97c114121",
                "throughput": 125,
                "volume_id": "vol-02945f6970d9af616",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "api-server-sg20250714151938803400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07680978a4897c07a",
            "tags": {
              "Name": "atlas-of-us-api-server"
            },
            "tags_all": {
              "Name": "atlas-of-us-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cbee6559cf94c30"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_api_profile",
            "aws_iam_role.ec2_api_role",
            "aws_key_pair.api_server_key",
            "aws_security_group.api_server_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "embeddings_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06ba285c80bc4ab50",
            "arn": "arn:aws:ec2:us-east-2::instance/i-084072b8cd9b8de16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "embeddings-api-ec2-profile",
            "id": "i-084072b8cd9b8de16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "api-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0696d56dedeabad52"
              }
            ],
            "primary_network_interface_id": "eni-0696d56dedeabad52",
            "private_dns": "ip-172-31-47-251.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.251",
            "public_dns": "ec2-3-133-35-128.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.35.128",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:145880140878:key/e5a7491f-3cfe-4cf0-a10b-efe97c114121",
                "throughput": 125,
                "volume_id": "vol-03fd1283b461fd11b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "embeddings-api-sg20251230032737672600000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07680978a4897c07a",
            "tags": {
              "Name": "embeddings-api-server"
            },
            "tags_all": {
              "Name": "embeddings-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fd8dafaddaf63a1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.embeddings_api_ec2_profile",
            "aws_iam_role.embeddings_api_ec2_role",
            "aws_key_pair.api_server_key",
            "aws_security_group.embeddings_api_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "image_gen_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e8e8b93cbdb8f2ed",
            "arn": "arn:aws:ec2:us-east-2::instance/i-019eea96fc8e8609b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "image-gen-api-ec2-profile",
            "id": "i-019eea96fc8e8609b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "api-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b9b3250d7c0aeb27"
              }
            ],
            "primary_network_interface_id": "eni-0b9b3250d7c0aeb27",
            "private_dns": "ip-172-31-35-192.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.192",
            "public_dns": "ec2-3-141-157-13.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.157.13",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:145880140878:key/e5a7491f-3cfe-4cf0-a10b-efe97c114121",
                "throughput": 125,
                "volume_id": "vol-0237cbf9c2f912070",
                "volume_size": 200,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "image-gen-api-sg20260104190648149200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07680978a4897c07a",
            "tags": {
              "Name": "image-gen-api-server"
            },
            "tags_all": {
              "Name": "image-gen-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096eb607cca0268d2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.image_gen_api_ec2_profile",
            "aws_iam_role.image_gen_api_ec2_role",
            "aws_key_pair.api_server_key",
            "aws_security_group.image_gen_api_sg",
            "data.aws_ami.deep_learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "llm_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06ba285c80bc4ab50",
            "arn": "arn:aws:ec2:us-east-2::instance/i-00288443bdb2180d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "llm-api-ec2-profile",
            "id": "i-00288443bdb2180d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "c6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "api-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05b7f53b83fbaeb5d"
              }
            ],
            "primary_network_interface_id": "eni-05b7f53b83fbaeb5d",
            "private_dns": "ip-172-31-32-89.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.89",
            "public_dns": "ec2-3-149-97-106.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.97.106",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:145880140878:key/e5a7491f-3cfe-4cf0-a10b-efe97c114121",
                "throughput": 125,
                "volume_id": "vol-0f5edfe910cd52701",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "llm-api-sg20251230032738092900000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07680978a4897c07a",
            "tags": {
              "Name": "llm-api-server"
            },
            "tags_all": {
              "Name": "llm-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7a3fd40d973e327"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.llm_api_ec2_profile",
            "aws_iam_role.llm_api_ec2_role",
            "aws_key_pair.api_server_key",
            "aws_security_group.llm_api_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:security-group/sg-02cbee6559cf94c30",
            "description": "Security group for API server EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cbee6559cf94c30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-server-sg20250714151938803400000002",
            "name_prefix": "api-server-sg",
            "owner_id": "145880140878",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-server-sg"
            },
            "tags_all": {
              "Name": "api-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4178908792a1dca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "embeddings_api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:security-group/sg-08fd8dafaddaf63a1",
            "description": "Security group for embeddings API EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fd8dafaddaf63a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "embeddings-api-sg20251230032737672600000002",
            "name_prefix": "embeddings-api-sg",
            "owner_id": "145880140878",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "embeddings-api-sg"
            },
            "tags_all": {
              "Name": "embeddings-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4178908792a1dca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "image_gen_api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:security-group/sg-096eb607cca0268d2",
            "description": "Security group for Image Gen API EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096eb607cca0268d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "image-gen-api-sg20260104190648149200000001",
            "name_prefix": "image-gen-api-sg",
            "owner_id": "145880140878",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-gen-api-sg"
            },
            "tags_all": {
              "Name": "image-gen-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4178908792a1dca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "llm_api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:security-group/sg-0f7a3fd40d973e327",
            "description": "Security group for LLM API EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7a3fd40d973e327",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "llm-api-sg20251230032738092900000003",
            "name_prefix": "llm-api-sg",
            "owner_id": "145880140878",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "llm-api-sg"
            },
            "tags_all": {
              "Name": "llm-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4178908792a1dca"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}